# microcenter-scraper-monitor

./: .dockerignore  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml
monitor/: monitor.py
scrapers/: item.py  microcenter.py
tests/: test_scrapers.py
utils/: config_loader.py  logging_config.py  notifications.py
