[project]
name = "microcenter-scrapper-prefect"
version = "0.1.0"
description = "Scrapes Microcenter website for Open Box GPUs with Prefect"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "httpx[http2]>=0.28.1",
    "prefect>=3.2.9",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-httpx>=0.35.0",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "ruff>=0.7.4",
]
